photos link fix

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="photos/Main-logo.png" alt="Ambudoc Logo">
+                <img src="photos\Main-logo.png" alt="Ambudoc Logo">
             </div>
             <ul class="nav-links">
                 <li><a href="index.html#home">Home</a></li>
