--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="logo">
                 <a href="index.html">
-                    <img src="photos/Main-logo.png" alt="Ambudoc Logo">
+                    <img src="photos\Main-logo.png" alt="Ambudoc Logo">
                 </a>
             </div>
             <ul class="nav-links">
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="photos/Mainpage-hero.png" alt="Ambulance">
+                <img src="photos\Mainpage-hero.png" alt="Ambulance">
             </div>
         </section>
 
@@ -54,17 +54,17 @@
             <h2>Our Services</h2>
             <div class="services-container">
                 <div class="service-card">
-                    <img src="photos/ambulance-at-event.png" alt="Ambulance at an event">
+                    <img src="photos\ambulance-at-event.png" alt="Ambulance at an event">
                     <h3>Ambulances for Events</h3>
                     <p>Ensure the safety of your attendees with our standby ambulance services for sports, concerts, and public gatherings.</p>
                 </div>
                 <div class="service-card">
-                    <img src="photos/Ambulance-outside-nursinghome.png" alt="Ambulance outside a nursing home">
+                    <img src="photos\Ambulance-outside-nursinghome.png" alt="Ambulance outside a nursing home">
                     <h3>Ambulances for Clinics</h3>
                     <p>Reliable patient transport solutions for nursing homes, small clinics, and hospitals without dedicated ambulance fleets.</p>
                 </div>
                 <div class="service-card">
-                    <img src="photos/booking-hero.png" alt="Flexible rental plans illustration">
+                    <img src="photos\booking-hero.png" alt="Flexible rental plans illustration">
                     <h3>Flexible Rental Plans</h3>
                     <p>Choose from hourly, daily, or monthly rental options tailored to meet your specific needs and budget.</p>
                 </div>
