--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="photos\Main-logo.png" alt="Ambudoc Logo">
+                <img src="Photos\Main-logo.png" alt="Ambudoc Logo">
             </div>
             <ul class="nav-links">
                 <li><a href="index.html#home">Home</a></li>
@@ -37,7 +37,7 @@
         <section id="about" style="padding-top: 120px; padding-bottom: 60px;">
             <div class="about-container">
                 <div class="about-image">
-                    <img src="photos\prince-kaliraman.png" alt="Prince Kaliraman, Founder of Ambudoc">
+                    <img src="Photos\prince-kaliraman.png" alt="Prince Kaliraman, Founder of Ambudoc">
                 </div>
                 <div class="about-text">
                     <h2>About Ambudoc</h2>
