booking photo fix

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <p>Reliable patient transport solutions for nursing homes, small clinics, and hospitals without dedicated ambulance fleets.</p>
                 </div>
                 <div class="service-card">
-                    <img src="photos\booking-hero.png" alt="Flexible rental plans illustration">
+                    <img src="Photos\booking-hero.png" alt="Flexible rental plans illustration">
                     <h3>Flexible Rental Plans</h3>
                     <p>Choose from hourly, daily, or monthly rental options tailored to meet your specific needs and budget.</p>
                 </div>
